<resources>
    <string name="app_name">Happy Wan Nyan</string>
    <string name="skip">Skip</string>
    <string name="Login">Log in</string>
    <string name="fb_login_protocol_scheme">fb1381434255240015</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook">Facebook</string>
    <string name="slide1_text">Find the perfect pet sitter</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="youcanloginwith">You can login with</string>
    <string name="donthaveanacc">Don\'t have an account?</string>
    <string name="signupnow">Sign Up now</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="breed">Breed</string>
    <string name="action_settings">Settings</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_yourpet">Your Pet</string>
    <string name="nav_booking">Bookings</string>
    <string name="nav_payment">Payment</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_help">Help</string>
    <string name="nav_logout">Log Out</string>
    <string name="search">Search</string>
    <string name="hint_search_addrres">Search Postal Code or Address</string>
    <string name="chosedate">Choose Date</string>
    <string name="searchpage_txt">Our Community helps pet parent find the perfect solution for their sitting needs.</string>
    <string name="i_am_looking">I am looking for....</string>
    <string name="Walking">Walking</string>
    <string name="petsitting">Pet Sitting</string>
    <string name="Daycare">Daycare</string>
    <string name="pet_homestay">Pet Homestay</string>
    <string name="ok">OK</string>
    <string name="SignUp">Sign Up</string>
    <string name="LoginAlertTitle">Alert</string>
    <string name="Please_enter_both">Please Enter Email Id and Password Both</string>
    <string name="Please_enter_valid_email">Please Enter Valid Email Id</string>
    <string name="signuplebel">By clicking Create Account or Sign Up with Facebook, you confirm that you accept the Terms of Service</string>
    <string name="youcansignupwith">You can Sign Up With</string>
    <string name="alreadymember">Already a member</string>
    <string name="Loginnow">Log in now</string>
    <string name="cancel">Cancel</string>
    <string name="calender">Calender</string>
    <string name="month_name_format">MMMM yyyy</string>
    <string name="day_name_format">EEE</string>
    <string name="signup_password_checkingtext">Password should be contain four or more AlphaNumeric</string>
    <string name="chose_pettype">Chose pet type</string>
    <string name="pet_size">Pet size</string>
    <string name="pet_age">Pet age</string>
    <string name="whatisyourdailybudgetperpet">What is your daily budget per pet?</string>
    <string name="otherOption">Other Option</string>
    <string name="facebook_app_id" translatable="false">1381434255240015</string>
    <string name="title_activity_search_result">Map</string>
    <string name="reservation">Reservation</string>
    <string name="request_reservation">Request Reservation</string>
    <string name="all_messages">All Messages</string>
    <string name="ChooseService">Choose Service</string>
    <string name="Booking">Booking</string>
    <string name="StartDate">Start Date</string>
    <string name="Enddate">End Date</string>
    <string name="location">LOCATION</string>
    <string name="about">About</string>
    <string name="service">Services</string>
    <string name="review">Reviews</string>
    <string name="images">Photos</string>
    <string name="specialskill">SPECIAL SKILLS</string>
    <string name="specialaccomod">SPECIAL ACCOMMODATIONS</string>
    <string name="booknow">BOOK NOW</string>
    <string name="petrequirement">PET SIZE ACCEPTED</string>
    <string name="adapter_your_pets_year">Year</string>
    <string name="adapter_your_pets_month">Month</string>
    <string name="adapter_your_pets_gender">Gender</string>
    <string name="adapter_your_pets_size">Size</string>
    <string name="favorite_sitters_delete">Delete</string>
    <string name="submit">Submit</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="up_coming_booking">Up Coming</string>
    <string name="current_booking">Current</string>
    <string name="pending_booking">Pending</string>
    <string name="past_booking">Past</string>
    <string name="up_coming_booking_start_date">Start date</string>
    <string name="up_coming_booking_id">Booking ID</string>
    <string name="up_coming_booking_end_date">End date</string>
    <string name="up_coming_booking_service">Service</string>
    <string name="up_coming_booking_total_pets">Total Pet\'s</string>
    <string name="up_coming_booking_total_amount">Total Amount</string>
    <string name="Code">Verification  Code</string>
    <string name="newPassword">New Password</string>
    <string name="please_enter_code">Please enter a valid code</string>
    <string name="ResetPassword">Reset Password</string>
    <string name="signupsuccess">Sign up success please check your email </string>
    <string name="loading">Loading...</string>
    <string name="TotalPets">Total Pet\'s</string>
    <string name="responseinoneday">Responds in 1 day</string>
    <string name="give_the_permission">Give the permission!</string>
    <string name="would_you_mind_to_turn_gps_on">Would you mind to turn GPS on?</string>
    <string name="wanyanmeetup">Wan-Nyan meet up</string>
    <string name="contact">Contact</string>
    <string name="nav_favoritesitter">Favorite Sitters</string>
    <string name="ic_vector_favourite_delete">Delete</string>
    <string name="next">Next</string>
    <string name="FirestName">First Name</string>
    <string name="FirstName_photo">First Name (Phonetic)</string>
    <string name="LastName">Last Name</string>
    <string name="LastName_photo">Last Name (Phonetic)</string>
    <string name="letthesitter">Let the sitter know your preferred time (Optional)</string>
    <string name="noofnight">No. of Nights</string>
    <string name="noofpet">No. of Pets</string>
    <string name="trust_safty"><![CDATA[Trust & Safety  Fee]]></string>
    <string name="tota_amnt">Total Amount</string>
    <string name="cancelpolicy">Cancelation Policy</string>
    <string name="payment_details">Payment Details</string>
    <string name="add_another_pets">Add Another Pets</string>
    <string name="Chosepettype">Choose pet type</string>
    <string name="Name">Name</string>
    <string name="Year">Year</string>
    <string name="Month">Month</string>
    <string name="Gender">Gender</string>
    <string name="isyourcatspayedorneutered">Is your cat spayed or neutered?</string>
    <string name="isyourcatfriendlywithotherpets">Is your cat friendly with other pets?</string>
    <string name="describeyourpet">Describe your pet</string>
    <string name="no_reviewFound">No Review found</string>
    <string name="no_ImagesFound">No Images Found</string>
    <string name="no_ServicesFound">No Service Found</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="Title_req_meetup">Request Wan-Nyan meet up</string>
    <string name="alternative_date">Alternate Date</string>
    <string name="with_pet">With Pet</string>
    <string name="Enter_your_msg_bellow">Enter your message bellow</string>
    <string name="numberofpets">Number of pets</string>
    <string name="sucess">Success</string>
    <string name="Title_send_a_msg">Send a Message</string>
    <string name="Caontact_lebel1">Add details about your schedule, ask questions, or just introduce yourself!</string>
    <string name="add_a_message">Add a Message</string>
    <string name="send">Send</string>
    <string name="ihavenotdateyet">I don\'t have dates yet</string>
    <string name="pickuptime">Pick-Up Time</string>
    <string name="dropofftime">Drop-Off Time</string>
    <string name="pleaseselect">Please Slect</string>
    <string name="please_enter_message">Please type message here</string>
    <string name="select">Please Select</string>
    <string name="nav_pastsitter">Past Sitters</string>
    <string name="delete">Delete</string>
    <string name="add_image">Add Image</string>
    <string name="choose_cause_type">I am looking for my pet..</string>
    <string name="save">Save</string>
    <string name="no_pet_data_found">No Pet information Found</string>
    <string name="slectDate">Select Date</string>
    <string name="generalequerys">General Inquiry</string>
    <string name="mypets">My Pets</string>
    <string name="calender_tips">Select the start date and then the end date on the same page</string>
    <string name="Dismiss">Dismiss</string>
    <string name="nevershowstng">Never show this message again</string>
    <string name="writeyourmessage">Write your message</string>
    <string name="Date">Date</string>
    <string name="OfDays">number of Days</string>
    <string name="total_Payableamount">Total Payable Amount</string>
    <string name="Existing">Existing</string>
    <string name="NewCard">New Card</string>
    <string name="TermsCondition"><![CDATA[Terms & Condition]]></string>
    <string name="join">Joined:</string>
    <string name="BookingId">Booking ID:</string>
    <string name="pleasenteraddress">Please Enter Address</string>
    <string name="do_you_want_to_cancel_booking">Are you sure you want to cancel this booking?</string>
    <string name="Error">Error</string>
    <string name="Deny">Deny</string>
    <string name="Instruction_for_Cancel_req">According to the cancellation policy you will be charged for 50% of the booking total, up to ¥5000.</string>
    <string name="select_cancel_reason">Select a cancellation reason </string>
    <string name="explain_why_cancel">Explain why you are cancelling this booking</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_somple_msg">Are you sure that you want to accept this booking ?</string>
    <string name="submit_review">Submit Review</string>
    <string name="upload_attachment">Upload Attachment</string>
    <string name="delete_message">Delete this message?</string>
    <string name="viewmore">View More..</string>
    <string name="description">Description</string>
    <string name="lbl_cardno">Credit card Number</string>
    <string name="lbl_secrect">Security code</string>
    <string name="existingcard">Your Cards</string>
    <string name="addnewcard">Add New Card</string>
    <string name="add">Add</string>
    <string name="how_many_times">How many times?</string>
    <string name="how_many_visits">How many visits?</string>
    <string name="send_request">Send Request</string>
    <string name="this_is_just_a_reservation_request">This is just a Reservation Request.Your card is only charged after the Sitter accept this request.</string>
    <string name="reservation_request">Reservation Request</string>
    <string name="agree_to_the_terms_and_conditions">By clicking Send Request, you agree to make all reservations and payments through HappywanNyan, and agree to the terms and conditions</string>
    <string name="nav_account">Account</string>
    <string name="change_email_address">Change Email Address</string>
    <string name="new_email_address">New Email Address</string>
    <string name="confirm_email_address">Confirm Email Address</string>
    <string name="change_your_password">Change Your Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>