<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar">

        <ImageView
            android:id="@+id/IMG_icon_drwaer"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_menu_drwaer" />

        <com.happywannyan.Font.SFNFTextView
            android:id="@+id/PAGE_Titile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nav_account"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/page_titiel" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/RL_HEADER"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_email_address"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_email_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Your current Email: koushik.sarkar@esolzmail.com"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />


            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/new_email_address"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EDX_new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_curve_border"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true" />

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/confirm_email_address"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EDX_confirm_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_curve_border"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true" />


            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_change_email"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/change_email_address" />


            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change_your_password"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />


            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/old_password"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EDX_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_curve_border"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true" />


            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/new_password"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EDX_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_curve_border"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true" />


            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/confirm_password"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/EDX_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/round_curve_border"
                android:minLines="1"
                android:padding="10dp"
                android:singleLine="true" />

            <com.happywannyan.Font.SFNFTextView
                android:id="@+id/tv_change_password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/change_password" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
