<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:stripe="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.happywannyan.Activities.Booking.BookingDetailsActivity">

    <RelativeLayout
        android:id="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <ImageView
            android:id="@+id/IMG_icon_back"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:padding="15dp"
            android:src="@drawable/ic_arrow_back_white" />

        <com.happywannyan.Font.SFNFTextView
            android:id="@+id/PAGE_Titile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@+id/IMG_icon_back"
            android:gravity="center"
            android:padding="5dp"
            android:paddingLeft="20dp"
            android:text="@string/nav_booking"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/page_titiel" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.happywannyan.Font.SFNFBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total_Payableamount" />

                <com.happywannyan.Font.SFNFBoldTextView
                    android:id="@+id/tv_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="$5000"
                    android:textColor="@color/colorBtnRed" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorGrayProject"
                android:paddingBottom="5dp" />

            <android.support.v7.widget.CardView
                android:paddingBottom="5dp"
                android:id="@+id/NEWCARD"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:cardBackgroundColor="@color/colorLightGreen"
                stripe:cardElevation="2dp">

                <com.happywannyan.Font.SFNFTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/addnewcard"
                    android:textColor="@color/colorWhite" />
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/REC_Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/TermsCondition" />

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/agree_to_the_terms_and_conditions"
                android:textColor="@color/colorBlack" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_input_widget"
                android:onClick="test"
                android:text="test"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/Card_request"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="@color/colorBtnRed"
        app:cardCornerRadius="23dp"
        app:cardElevation="3dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/confirm"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:src="@drawable/ic_right_arrow_white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
