<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stripe="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/colorwhite"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.happywannyan.SitterBooking.BookingFragmentFoure">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.happywannyan.Font.SFNFBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/total_Payableamount" />

                <com.happywannyan.Font.SFNFBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:text="$5000"
                    android:textColor="@color/btn_red" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray_project" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/Existing" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/NewCard" />
            </RadioGroup>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TermsCondition" />

            <com.happywannyan.Font.SFNFTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="jfhbvjfkhvb kdfhv dkfhv dfkhjv dfkhv dkfhv kdfhv kdfhv kdhfv dfhjv dfhjv dfhjv dfhj df d bjd dfb d"
                android:textColor="@color/Black" />

            <com.stripe.android.view.CardInputWidget
                android:id="@+id/card_input_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                stripe:cardTextErrorColor="@android:color/holo_orange_dark"
                stripe:cardTint="@android:color/holo_purple" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_input_widget"
                android:onClick="test"
                android:text="test"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>


    <android.support.v7.widget.CardView
        android:id="@+id/Card_next"
        app:cardBackgroundColor="@color/btn_red"
        app:cardCornerRadius="23dp"
        app:cardElevation="3dp"
        android:layout_width="210dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <com.happywannyan.Font.SFNFTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/next"
                android:textAllCaps="true"
                android:textColor="@color/colorwhite"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="5dp"
                android:src="@drawable/ic_right_arrow_white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
