<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:stripe="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.happywannyan.Fragments.MyPetsFragments">


    <RelativeLayout
        android:id="@+id/RL_HEADER"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingTop="@dimen/cast_expanded_controller_margin_between_status_text_and_seek_bar">

        <ImageView
            android:id="@+id/IMG_icon_drwaer"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:padding="10dp"
            android:src="@mipmap/ic_menu_drwaer" />
        <com.happywannyan.Font.SFNFTextView
            android:id="@+id/PAGE_Titile"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/nav_payment"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/page_titiel" />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@+id/RL_HEADER"
        android:id="@+id/LL_card_select"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingBottom="5dp"
        android:orientation="horizontal">

        <com.happywannyan.Font.SFNFTextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:text="@string/existingcard"
            android:layout_height="match_parent" />

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:id="@+id/NEWCARD"
            app:cardBackgroundColor="@color/colorPrimary"
            stripe:cardElevation="2dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_height="40dp" >
            <com.happywannyan.Font.SFNFTextView
                android:layout_width="match_parent"
                android:text="@string/addnewcard"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/colorwhite"
                android:layout_height="match_parent" />
        </android.support.v7.widget.CardView>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/LL_card_select"
        android:background="@color/colorwhite">
    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
